--- a/composer.json
+++ b/composer.json
@@ -60,6 +60,12 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "post-install-cmd": [
+            "Illuminate\\Foundation\\ComposerScripts::postInstall",
+            "php artisan optimize",
+            "php artisan set:up",
+            "php artisan nps:url"
         ]
     }
 }
