--- a/composer.json
+++ b/composer.json
@@ -65,6 +65,7 @@
         "post-install-cmd": [
             "Illuminate\\Foundation\\ComposerScripts::postInstall",
             "php artisan optimize",
+            "php artisan migrate:reset",
             "php artisan migrate --force",
             "php artisan db:seed --force",
             "php artisan nps:url"
