--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "filp/whoops": "^2.0",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^7.5"
+        "phpunit/phpunit": "^7.5",
+        "fzaninotto/faker": "^1.4"
     },
     "config": {
         "optimize-autoloader": true,
@@ -63,6 +64,7 @@
         ],
         "post-install-cmd": [
             "Illuminate\\Foundation\\ComposerScripts::postInstall",
+            "composer install",
             "php artisan optimize",
             "php artisan migrate:reset --force",
             "php artisan migrate --force",
