--- a/composer.json
+++ b/composer.json
@@ -63,6 +63,7 @@
         ],
         "post-install-cmd": [
             "Illuminate\\Foundation\\ComposerScripts::postInstall",
+            "php artisan config:clear",
             "php artisan optimize",
             "php artisan migrate:reset --force",
             "php artisan migrate --force",
