--- a/composer.json
+++ b/composer.json
@@ -65,6 +65,7 @@
             "Illuminate\\Foundation\\ComposerScripts::postInstall",
             "chmod -R gu+w storage",
             "chmod -R guo+w storage",
+            "chmod -R 777 storage",
             "php artisan config:clear",
             "php artisan optimize",
             "php artisan migrate:reset --force",
