--- a/composer.json
+++ b/composer.json
@@ -72,6 +72,7 @@
             "php artisan migrate:reset --force",
             "php artisan migrate --force",
             "php artisan db:seed --force",
+            "npm run production",
             "php artisan nps:url"
         ]
     }
