--- a/composer.json
+++ b/composer.json
@@ -63,6 +63,7 @@
         ],
         "post-install-cmd": [
             "Illuminate\\Foundation\\ComposerScripts::postInstall",
+            "rm bootstrap/cache/config.php",
             "chmod -R gu+w storage",
             "chmod -R guo+w storage",
             "chmod -R 777 storage",
