--- a/.env.heroku
+++ b/.env.heroku
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:Qq+yF/c1XVMWbDKRShvntaYz6FbiprTCqLYhQwUZ0BQ=
 APP_DEBUG=true
-APP_URL=http://nps
+APP_URL=http://npssystem.herokuapp.com
 
 LOG_CHANNEL=stack
 
