--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,8 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Seeds\\": "database/seeds"
         },
         "classmap": [
             "database/seeds",
