--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,11 @@
         "astrotomic/laravel-translatable": "^11.1.3",
         "davejamesmiller/laravel-breadcrumbs": "^5.2",
         "fideloper/proxy": "^4.0",
+        "fzaninotto/faker": "^1.4",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^5.8",
-        "fzaninotto/faker": "^1.4"
+        "mpclarkson/freshdesk-laravel": "^0.3.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
